@@ -20,7 +20,6 @@
 #
 # Tests the array replies from services.
 
-require 'rubygems'
 require 'test/unit'
 
 require 'ads_common/config'
